CREATE TABLE SERVICE(
    WORKING_NR          INT NOT NULL CONSTRAINT WORKING_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    FIRST_NAME          VARCHAR(15),
    LAST_NAME           VARCHAR(15)
);

CREATE TABLE DISH(
    DISH_NR             INT NOT NULL CONSTRAINT DISH_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    NAME                VARCHAR(15)
);

CREATE TABLE PRODUCT(
    ITEM_NR             INT NOT NULL CONSTRAINT ITEM_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    DISH_NR             INT CONSTRAINT PRODUCT_FK REFERENCES DISH(DISH_NR),
    NAME                VARCHAR(20),
    PRICE               DOUBLE
);

CREATE TABLE DESK(
  DESK_NR               INT NOT NULL CONSTRAINT DESK_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
  WORKING_NR            INT CONSTRAINT DESK_FK REFERENCES SERVICE(WORKING_NR)
);

CREATE TABLE BILL(
    BILL_NR             INT NOT NULL CONSTRAINT BILL_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    WORKING_NR          INT CONSTRAINT BILL_WOR_FK REFERENCES SERVICE(WORKING_NR),
    DESK_NR             INT CONSTRAINT BILL_TAB_FK REFERENCES DESK(DESK_NR)
);

CREATE TABLE INVOICE
(
    INVOICE_NR          INT NOT NULL CONSTRAINT INVOICE_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    BILL_NR             INT CONSTRAINT INVOICE_BI_FK REFERENCES BILL(BILL_NR),
    ITEM_NR             INT CONSTRAINT INVOICE_IT_FK REFERENCES PRODUCT(ITEM_NR),
    AMOUNT_OF_ITEM      INT,
    PRICE               DOUBLE
);