@startuml
class Dish {
dishNr: int
name: String
}

class Product {
dishNr: int
itemNumber: int
name: String
price: double
}

class Bill {
workingNr: int
tableNr: int
}

class Service {
workingNr: int
name: String
}

class Table {
workingNr: int
tableNr: int
}

class Order {
itemNumber: int
amountOfItem: int
price: double
workingNr: int
}


Service "1" -- "*" Bill : > collects
Bill "*" -- "1" Table : < consumes
Service "1" -- "*" Table : > serves
Dish "1" -- "*" Product : > contains
Bill "*" -- "*" Product : > contains
(Bill, Product) . Order
@enduml